// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link adds a safe rel when target is blank 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007aff;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  color="primary"
  rel="noopener"
  target="_blank"
>
  Dummy
</a>
`;

exports[`Link does not add a safe rel when target is not blank 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007aff;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  color="primary"
  rel={null}
>
  Dummy
</a>
`;

exports[`Link renders 1`] = `
.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007aff;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  color="primary"
  rel={null}
>
  Dummy
</a>
`;
